force-app/main/fat/objects/Logger__mdt/Logger__mdt.object-meta.xml
<CustomObject>
    <label>Logger</label>
    <pluralLabel>Loggers</pluralLabel>
</CustomObject>