force-app/main/fat/objects/Logger__mdt/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>