force-app/main/fat/objects/Logger__mdt/fields/Logger_Object__c.field-meta.xml
<CustomField>
    <fullName>Logger_Object__c</fullName>
    <inlineHelpText>API Name of Custom Logger Object</inlineHelpText>
    <label>Logger Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>