force-app/main/fat/objects/Logger__mdt/fields/LoggerObjectLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectLoggingLevel__c</fullName>
    <inlineHelpText
  >API Name of Logging Level Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Logging Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>