force-app/main/fat/objects/Logger__mdt/fields/LoggerObjectMessage__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectMessage__c</fullName>
    <inlineHelpText
  >API Name of Message Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>