force-app/main/fat/objects/Logger__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>Logging_Level__c</columns>
    <columns>Logger_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>